--- a/style.css
+++ b/style.css
@@ -55,9 +55,31 @@ button{
     background: #ff2963;
     color: #fff;
     font-size: 16px;
-    padding: 5px 50px;
-    border-radius: 15px;
+    padding: 10px 30px;
+    border-radius: 35px;
     border: 0;
     outline: 0;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+button img{
+    width: 36px;
+    margin-right: 10px;
+}
+select{
+    flex: 1;
+    color:#131010 ;
+    background: #f7e4ef;
+    height: 50px;
+    padding: 0 20px;
+    outline: 0;
+    border: 0;
+    border-radius: 35px;
+    appearance:none;
+    background-image: url(images/icons8-dropdown-50.png);
+    background-repeat: no-repeat;
+    background-size: 20px;
+    background-position-x: calc(100% - 20px);
+    background-position-y: 18px;
 }
